================
 Change History
================

3.9.0 (2009-??-??)
====================

New Features
------------

3.9.0a13 (2009-??-??)
=====================

New Features
------------

- The zeopack script has gotten a number of improvements:

  - Simplified command-line interface. (The old interface is still
    supported, except that support for ZEO version 1 servers has been
    dropped.)

  - Multiple storages can be packed in sequence.

    - This simplifies pack scheduling on servers serving multiple
      databases.

    - All storages are packed to the same time.

  - You can now specify a time of day to pack to.

  - The script will now time out if it can't connect to s storage in
    60 seconds.

- The connection now estimates the object size based on its pickle size
  and informs the cache about size changes.

  The database got additional configurations options (`cache-size-bytes`
  and `historical-cache-size-bytes`) to limit the
  cache size based on the estimated total size of cached objects.
  The default values are 0 which has the interpretation "do not limit
  based on the total estimated size".
  There are corresponding methods to read and set the new configuration
  parameters.

Bugs Fixed
----------

- fixed Python 2.6 compatibility issue with ZEO/zeoserverlog.py

- using hashlib.sha1 if available in order to avoid DeprecationWarning
  under Python 2.6

- made runzeo -h work

3.9.0a12 (2009-02-26)
=====================

Bugs Fixed
----------

- Connections from old ZEO clients weren't discarded when they were
  closed causing memory to leak and invalidations to become
  increasingly expensive over time.

- The monitor server didn't correctly report the actual number of
  clients. 

3.9.0a11 (2009-02-17)
=====================

Bugs Fixed
----------

- Packing a blob-enabled file storage in a ZEO server caused blob data
  to be lost.

- Packing could return spurious errors due to errors notifying